# aoc-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aoc/utils/: reporting.py  timing.py
src/aoc/y0000/d00/: solution.py
src/aoc/y2023/d01/: solution.py
src/aoc/y2023/d02/: solution.py
src/aoc/y2023/d03/: solution.py
src/aoc/y2023/d04/: solution.py
src/aoc/y2023/d05/: solution.py
src/aoc/y2023/d06/: solution.py
src/aoc/y2023/d07/: solution.py
src/aoc/y2023/d08/: solution.py
src/aoc/y2023/d09/: solution.py
src/aoc/y2023/d10/: solution.py
src/aoc/y2023/d11/: solution.py
src/aoc/y2023/d12/: solution.py
src/aoc/y2023/d13/: solution.py
src/aoc/y2023/d14/: solution.py
src/aoc/y2023/d15/: solution.py
src/aoc/y2023/d16/: solution.py
tests/y0000/d00/: test_solution.py
tests/y2023/d01/: test_solution.py
tests/y2023/d02/: test_solution.py
tests/y2023/d03/: test_solution.py
tests/y2023/d04/: test_solution.py
tests/y2023/d05/: test_solution.py
tests/y2023/d06/: test_solution.py
tests/y2023/d07/: test_solution.py
tests/y2023/d08/: test_solution.py
tests/y2023/d09/: test_solution.py
tests/y2023/d10/: test_solution.py
tests/y2023/d11/: test_solution.py
tests/y2023/d12/: test_solution.py
tests/y2023/d13/: test_solution.py
tests/y2023/d14/: test_solution.py
tests/y2023/d15/: test_solution.py
tests/y2023/d16/: test_solution.py
tests/y2023/d17/: test_solution.py
tests/y2023/d18/: test_solution.py
tests/y2023/d19/: test_solution.py
tests/y2023/d20/: test_solution.py
tests/y2023/d21/: test_solution.py
(+7 files in other folders)
