[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "My solutions and utilities for Advent of Code - Python Edition"
license = "MIT"
authors = ["Marc Jacobs <github@marcja.com>"]
readme = "README.md"
repository = "https://github.com/marcja/aoc-py"
packages = [{include = "aoc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
