[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "My solutions and utilities for Advent of Code - Python Edition"
license = "MIT"
authors = ["Marc Jacobs <github@marcja.com>"]
readme = "README.md"
repository = "https://github.com/marcja/aoc-py"
packages = [{include = "aoc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "example_path",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
xfail_strict = true

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
